--- a/contact.html
+++ b/contact.html
@@ -89,28 +89,28 @@
 
       <div class="icons">
          <i class="fas fa-clock"></i>
-         <h3>opening hours :</h3>
-         <p>00:07am to 00:06pm</p>
+         <h3>thời gian làm việc :</h3>
+         <p>00:07am - 00:06pm</p>
       </div>
 
       <div class="icons">
          <i class="fas fa-phone"></i>
          <h3>phone :</h3>
-         <p>+123-456-7890</p>
-         <p>+111-222-3333</p>
+         <p>0964467656</p>
+         <p>0396847688</p>
       </div>
 
       <div class="icons">
          <i class="fas fa-envelope"></i>
          <h3> email : </h3>
-         <p>shaikhanas@gmail.com</p>
-         <p>anasbhai@gmail.com</p>
+         <p>hosythanh07072001@gmail.com</p>
+         <p>khoahocvietlink@gmail.com</p>
       </div>
 
       <div class="icons">
          <i class="fas fa-map"></i>
-         <h3>address :</h3>
-         <p>mumbai, india - 400104</p>
+         <h3>địa chỉ :</h3>
+         <p>Bắc linh đàm , quân hoàng mai , hà nội</p>
       </div>
 
    </div>
@@ -140,67 +140,69 @@
 
 <section class="faq">
 
-   <h1 class="heading">frequently asked questions</h1>
+   <h1 class="heading">các câu hỏi thường gặp</h1>
 
    <div class="accordion-container">
 
       <div class="accordion active">
          <div class="accordion-heading">
-            <h3>how to contact for help?</h3>
+            <h3>liên hệ qua , trợ giúp</h3>
             <i class="fas fa-angle-down"></i>
          </div>
          <p class="accordion-content">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit consequatur molestias deserunt facere laborum doloremque fuga, quae aut. Recusandae officia quis temporibus! Magnam mollitia nostrum voluptatibus deserunt quidem. Natus, quo.
+            Căn cứ Nghị định số 98/2017/NĐ-CP ngày 18 tháng 8 năm 2017 của Chính phủ quy định chức năng, nhiệm vụ, quyền hạn và cơ cấu tổ chức của Bộ Công Thương;
          </p>
       </div>
 
       <div class="accordion">
          <div class="accordion-heading">
-            <h3>what is the best career in 2022?</h3>
+            <h3>
+               năm 2023 làm nghề gì tốt nhất?</h3>
             <i class="fas fa-angle-down"></i>
          </div>
          <p class="accordion-content">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit consequatur molestias deserunt facere laborum doloremque fuga, quae aut. Recusandae officia quis temporibus! Magnam mollitia nostrum voluptatibus deserunt quidem. Natus, quo.
+            Căn cứ Nghị định số 98/2017/NĐ-CP ngày 18 tháng 8 năm 2017 của Chính phủ quy định chức năng, nhiệm vụ, quyền hạn và cơ cấu tổ chức của Bộ Công Thương;
          </p>
       </div>
 
       <div class="accordion">
          <div class="accordion-heading">
-            <h3>how much fees for web development?</h3>
+            <h3>phí phát triển web là bao nhiêu?</h3>
             <i class="fas fa-angle-down"></i>
          </div>
          <p class="accordion-content">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit consequatur molestias deserunt facere laborum doloremque fuga, quae aut. Recusandae officia quis temporibus! Magnam mollitia nostrum voluptatibus deserunt quidem. Natus, quo.
+            Căn cứ Nghị định số 98/2017/NĐ-CP ngày 18 tháng 8 năm 2017 của Chính phủ quy định chức năng, nhiệm vụ, quyền hạn và cơ cấu tổ chức của Bộ Công Thương;
          </p>
       </div>
 
       <div class="accordion">
          <div class="accordion-heading">
-            <h3>can I choose my own tutor?</h3>
+            <h3>Tôi có thể tự chọn gia sư cho mình không?</h3>
             <i class="fas fa-angle-down"></i>
          </div>
          <p class="accordion-content">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit consequatur molestias deserunt facere laborum doloremque fuga, quae aut. Recusandae officia quis temporibus! Magnam mollitia nostrum voluptatibus deserunt quidem. Natus, quo.
+            Căn cứ Nghị định số 98/2017/NĐ-CP ngày 18 tháng 8 năm 2017 của Chính phủ quy định chức năng, nhiệm vụ, quyền hạn và cơ cấu tổ chức của Bộ Công Thương;
          </p>
       </div>
 
       <div class="accordion">
          <div class="accordion-heading">
-            <h3>what payment methods are availabe?</h3>
+            <h3>phương thức thanh toán nào có sẵn?</h3>
             <i class="fas fa-angle-down"></i>
          </div>
          <p class="accordion-content">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit consequatur molestias deserunt facere laborum doloremque fuga, quae aut. Recusandae officia quis temporibus! Magnam mollitia nostrum voluptatibus deserunt quidem. Natus, quo.
+            Căn cứ Nghị định số 98/2017/NĐ-CP ngày 18 tháng 8 năm 2017 của Chính phủ quy định chức năng, nhiệm vụ, quyền hạn và cơ cấu tổ chức của Bộ Công Thương;
          </p>
       </div>
 
       <div class="accordion">
          <div class="accordion-heading">
-            <h3>can I have free trial for a month?</h3>
+            <h3>
+               Tôi có thể dùng thử miễn phí trong một tháng không?</h3>
             <i class="fas fa-angle-down"></i>
          </div>
          <p class="accordion-content">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit consequatur molestias deserunt facere laborum doloremque fuga, quae aut. Recusandae officia quis temporibus! Magnam mollitia nostrum voluptatibus deserunt quidem. Natus, quo.
+            Căn cứ Nghị định số 98/2017/NĐ-CP ngày 18 tháng 8 năm 2017 của Chính phủ quy định chức năng, nhiệm vụ, quyền hạn và cơ cấu tổ chức của Bộ Công Thương;
          </p>
       </div>
 
@@ -242,10 +244,10 @@
          <h3> <i class="fas fa-lightbulb"></i> Vietlinkec </h3>
          <p>Liên hệ trực tiếp qua mạng xã hội.</p>
          <div class="share">
-            <a href="https://www.facebook.com/profile.php?id=100090595094814" class="fab fa-facebook-f"></a>
-            <a href="#" class="fab fa-twitter"></a>
-            <a href="#" class="fab fa-instagram"></a>
-            <a href="#" class="fab fa-linkedin"></a>
+            <a href="https://www.facebook.com/sythanh.ho.336" class="fab fa-facebook-f"></a>
+            <a href="https://www.facebook.com/sythanh.ho.336" class="fab fa-twitter"></a>
+            <a href="https://instagram.com/nabil_thv?igshid=YmMyMTA2M2Y=" class="fab fa-instagram"></a>
+            <a href="https://www.google.com/search?q=vietlinkedu+.com.vn&oq=viet&aqs=chrome.2.69i60j69i57j69i59j46i131i199i433i465i512j0i131i433i512j69i60l3.3186j1j4&sourceid=chrome&ie=UTF-8" class="fab fa-linkedin"></a>
          </div>
       </div>
 
