--- a/home.html
+++ b/home.html
@@ -273,10 +273,10 @@
          <h3> <i class="fas fa-lightbulb"></i> Vietlinkec </h3>
          <p>Liên hệ trực tiếp qua mạng xã hội.</p>
          <div class="share">
-            <a href="https://www.facebook.com/profile.php?id=100090595094814" class="fab fa-facebook-f"></a>
-            <a href="#" class="fab fa-twitter"></a>
-            <a href="#" class="fab fa-instagram"></a>
-            <a href="#" class="fab fa-linkedin"></a>
+            <a href="https://www.facebook.com/sythanh.ho.336" class="fab fa-facebook-f"></a>
+            <a href="https://www.facebook.com/sythanh.ho.336" class="fab fa-twitter"></a>
+            <a href="https://instagram.com/nabil_thv?igshid=YmMyMTA2M2Y=" class="fab fa-instagram"></a>
+            <a href="https://www.google.com/search?q=vietlinkedu+.com.vn&oq=viet&aqs=chrome.2.69i60j69i57j69i59j46i131i199i433i465i512j0i131i433i512j69i60l3.3186j1j4&sourceid=chrome&ie=UTF-8" class="fab fa-linkedin"></a>
          </div>
       </div>
 
